--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -2,6 +2,10 @@ h2 {
     border-bottom: 3px solid #000;
 }
 
+.status-table th:nth-child(1){
+    width: 7em;
+}
+
 .result-table{
     border-collapse: collapse;
     border: solid 2px gray;
