--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -2,6 +2,30 @@ h2 {
     border-bottom: 3px solid #000;
 }
 
+.option-box {
+    position: relative;
+    margin: 2em 0;
+    padding: 0.5em 1em;
+    border: solid 3px #90eba3;
+    border-radius: 8px;
+}
+.option-box .option-box-title {
+    position: absolute;
+    display: inline-block;
+    top: -13px;
+    left: 10px;
+    padding: 0 9px;
+    line-height: 1;
+    font-size: 16px;
+    background: #FFF;
+    color: #90eba3;
+    font-weight: bold;
+}
+.option-box p {
+    margin: 0; 
+    padding: 0;
+}
+
 .status-table th:nth-child(1){
     width: 7em;
 }
